letter spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,10 @@ ul a:hover {
 	color: black;
 	margin: auto;
 	text-align: center;
-	letter-spacing: -5px;
+	letter-spacing: -0.5vw;
 	position: relative;
 	top: 150px;
 }
 #name{
 	font-variant: small-caps;
-	letter-spacing: 0px;
 }
